# langcache-customer-data-eval

./: .gitignore  LICENSE  README.md  cache_evaluation.py  chr_analysis.py  chr_analysis_readme.md  customer_evaluation.py  evaluation.py  pyproject.toml  run.sh  run_benchmark.py  run_benchmark.sh  run_chr_analysis.sh
customer_analysis/: embedding_interface.py  file_handler.py  metrics_util.py  plotting.py  s3_util.py
dataset/: cache.csv  chatgpt.csv  queries.csv
scripts/: generate_benchmark_table.py  plot_multiple_precision_vs_cache_hit_ratio.py  plot_multiple_similarity_distributions.py  plot_precision_vs_cache_hit_ratio.py  plot_similarity_distributions.py  utils.py
src/customer_analysis/: __init__.py  data_processing.py  embedding_interface.py  file_handler.py  metrics_util.py  plotting.py  query_engine.py
src/customer_analysis/cli/: evaluation.py
tests/: rqe_test.py  test_chr_analysis.py  test_e2e_evaluation.py
