[project]
name = "customer_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "boto3>=1.40.18",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "redis>=6.4.0",
    "redisvl>=0.10.0",
    "s3fs>=2025.9.0",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "evaluation.py",
    "plot_precision_vs_cache_hit_ratio.py",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
max-line-length = 120
